--- a/css/style.css
+++ b/css/style.css
@@ -67,5 +67,31 @@ p {
 }
 
 /* LAYOUT */
+.container {
+    max-width: 75rem;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 9.375rem 3.125rem 6.25rem 9.375rem;
+    gap: 1.5rem;  
+}
 
+.stars img,
+.multiple-platforms img,
+.posting-schedule-image img,
+.schedule-image img,
+.grow-followers-image img,
+.create-content-image img,
+.ai-content-image img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+.create-content {
+    grid-column: 1 / 1;
+    grid-row: 1 / span 2;
+}
 
