--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,17 @@ p {
     grid-row: 1 / span 2;
 }
 
+.social-media {
+    grid-column: 2 / span 2;
+    grid-row: 1 / 2;
+}
+
+.schedule {
+    grid-column: 4 / 5;
+    grid-row: 1 / span 2;
+}
+
+
+
+
+
