--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@
 }
 
 img {
-  max-width: 100%;
-  display: block;
+  width: 12.5rem;
+  object-fit: cover;
 }
 
 body {
@@ -31,24 +31,116 @@ body {
   font-family: 'DM Sans', sans-serif;
   font-size: 1.125rem;
   line-height: 1;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+}
+
+main {
+  flex: 1;
+  margin-bottom: 1.8rem;
+  max-width: 75rem;
+  width: 100%;
+  height: 50rem;
   display: grid;
-  place-content: center;
+  grid-template-columns: repeat(4, minmax(12.5rem, 1fr));
+  grid-template-areas:
+    'item-1 item-2 item-2 item-3'
+    '. item-5 item-6 item-3'
+    'item-4 item-7 item-8 item-8';
+    gap: 2rem;
 }
 
-.xlg-text {
-
+div {
+  width: 100%;
+  height: 100%;
+  padding: 2.2rem;
+  display: flex;
+  flex-direction: column;
+  overflow: clip;
+  border-radius: .625rem;
 }
 
-.lg-text {
-
+h2 {
+  font-size: 2rem;
+  line-height: 1.8rem;
+  font-weight: 600;
 }
 
-.med-text {
-
+#item-1 {
+  grid-area: item-1;
+  background-color: var(--yellow-100);
+  height: 140%;
+  gap: 1.5rem;
 }
 
-.sm-text {
-
+#item-1 h2 {
+  font-size: 2.2rem;
+  line-height: 1.9rem;
 }
+
+#item-1 span {
+  font-style: italic;
+  color: var(--purple-500);
+}
+
+#item-2 {
+  grid-area: item-2;
+  background-color: var(--purple-500);
+  color: var(--white);
+  text-align: center;
+  align-items: center;
+}
+
+#item-2 h1 {
+  font-size: 3.5rem;
+  margin-bottom: 1.6rem;
+}
+
+#item-2 span.number {
+  color: var(--yellow-500);
+}
+
+#item-2 span.text {
+  font-style: italic;
+}
+
+#item-3 {
+  grid-area: item-3;
+  background-color: var(--purple-100);
+  justify-content: space-evenly;
+  gap: 1.2rem;
+}
+
+#item-3 img {
+  width: 25rem;
+}
+
+#item-4 {
+  grid-area: item-4;
+  height: 165%;
+  margin-top: -61%;
+  background-color: var(--yellow-500);
+  gap: 2rem;
+}
+
+#item-5 {
+  grid-area: item-5;
+  background-color: var(--white);
+  justify-content: space-evenly;
+  gap: 1rem;
+}
+
+#item-5 img {
+  width: 18.75rem;
+  margin-right: -6.25rem;
+  align-self: flex-end;
+  filter: drop-shadow(0 0 0.75rem #0000004d);
+}
+
+#item-6 {
+  
+}
+
 
 
